fix(mathjax): prevent cut off of tall mathjax lines

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,11 @@ body.scrolling-horizontal-mathjax span.math {
     max-width: 100%;
     display: inline-block;
     vertical-align: top;
-    margin-bottom: -100%;
+    margin-bottom: calc(-1 * var(--scrollbar-width)) !important;
+}
+
+body.scrolling-horizontal-mathjax.scrolling-scrollbar-width span.math {
+    margin-bottom: calc(-1 * var(--scrolling-scrollbar-width)) !important;
 }
 
 /* --- File tree --- */
